--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,15 @@ body{
 .container{
     background-color: blue;
 }
+
+.box-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .box {
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    margin: 10px;
+  }
