--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,8 @@ body{
     background-color: red;
     margin: 10px;
   }
+
+  .todo{
+    background-color: white;
+    border: 2px solid black; 
+  }
